--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,20 @@
 {
-  "short_name": "Little Eagle Photo",
+  "short_name": "Leagle Photo",
   "name": "Little Eagle Photography Website",
-  "icons": [],
+  "icons": [
+    {
+        "src": "/android-chrome-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+    },
+    {
+        "src": "/android-chrome-256x256.png",
+        "sizes": "256x256",
+        "type": "image/png"
+    }
+],
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
 }
