--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Leagle Photo",
-  "name": "Little Eagle Photography Website",
+  "short_name": "LittleEagle Photography",
+  "name": "LittleEagle Photography - Professional Portrait and Event Photography Studio",
   "icons": [
     {
         "src": "/android-chrome-192x192.png",
