--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "LittleEagle Photography",
-  "name": "LittleEagle Photography - Professional Portrait and Event Photography Studio",
+  "short_name": "Little Eagle Photography",
+  "name": "Little Eagle Photography - Event & People Photographer",
   "icons": [
     {
         "src": "/android-chrome-192x192.png",
