--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react-helmet": "6.1.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
+    "react-snap": "1.23.0",
     "styled-components": "5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
